# ng

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.devcontainer/: devcontainer.json
frontend/: README.md  package.json
javascript/: .eslintignore  .eslintrc  .prettierrc  package.json  tsconfig.json
web/: Dockerfile  Dockerfile.prod  README.md  pyproject.toml
web/.devcontainer/: devcontainer.json  docker-compose.yml
web/env/: .env.dev  .env.prod  .env.prod.db
web/web/: settings.py
